--- a/.pylintrc
+++ b/.pylintrc
@@ -143,7 +143,8 @@ disable=print-statement,
         invalid-name,
         no-self-use,
         import-error,
-        missing-docstring
+        missing-docstring,
+        unbalanced-tuple-unpacking
 
 
 # Enable the message, report, category or checker with the given id(s). You can
